added education detail

--- a/index.html
+++ b/index.html
@@ -331,25 +331,28 @@
                         <ul class="education-accordion">
                             <li>
                                 <input type="checkbox" name="education-accordion" id="first"  checked>
-                                <label for="first" class="education-title">Product</label>
+                                <label for="first" class="education-title">SSLC</label>
                                 <div class="content">
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, enim magnam. Consectetur minus dolores aspernatur repellendus asperiores nulla esse quas mollitia excepturi numquam, tempore natus velit blanditiis delectus totam quidem!</p>
+                                        <div class="year-persentage"><h3>2015-2016</h3> <h3>75%</h3></div>
+                                        <p>Goverment Vinoba Higher Secondary School,Thalavaipettai</p>
                                 </div>
                             </li>
 
                             <li>
                                 <input type="checkbox" name="education-accordion" id="second">
-                                <label for="second" class="education-title">Product</label>
+                                <label for="second" class="education-title">HSC</label>
                                 <div class="content">
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, enim magnam. Consectetur minus dolores aspernatur repellendus asperiores nulla esse quas mollitia excepturi numquam, tempore natus velit blanditiis delectus totam quidem!</p>
+                                    <div class="year-persentage"><h3>2017-2018</h3> <h3>48%</h3></div>
+                                        <p>Goverment Vinoba Higher Secondary School,Thalavaipettai</p>
                                 </div>
                             </li>
 
                             <li>
                                 <input type="checkbox" name="education-accordion" id="third">
-                                <label for="third" class="education-title">Product</label>
+                                <label for="third" class="education-title">Bsc.CS</label>
                                 <div class="content">
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, enim magnam. Consectetur minus dolores aspernatur repellendus asperiores nulla esse quas mollitia excepturi numquam, tempore natus velit blanditiis delectus totam quidem!</p>
+                                         <div class="year-persentage"><h3>2019-2022</h3> <h3>72%</h3></div>
+                                        <p>Periyar University,SSM college of Arts & Scinence</p>
                                 </div>
                             </li>
 
